# mytuis

./: AGENTS.md  README.md  awapps.sh  mytuis.sh  mytuisv1.sh
mytuis/: .gitignore  AGENTS.md  Cargo.toml  README.md
mytuis/src/: cli.rs  config.rs  error.rs  lang.rs  main.rs  model.rs  open.rs  resolve.rs  storage.rs
mytuis/src/tui/: form.rs  list_view.rs  mod.rs  theme.rs
